# MultichannelNumerov

./: CMakeLists.txt  ConstantGridSolver.cpp  ConstantGridSolver.h  ConstantGridSolverTests.h  NonconstantGridSolver.cpp  NonconstantGridSolver.h  NonconstantGridSolverTests.h  Parameters.cpp  Parameters.h  ParametersTests.h  main.cpp  tests.cpp
TestData/: 4Lines_file_with_params.txt  Untitled-1.nb  good_V_two_channels_nx=3.txt  good_file_with_params.txt  good_length_file_with_params_with_bad_values.txt
Tests/: ConstantGridSolverTests.h  NonconstantGridSolverTests.h  ParametersTests.h  tests.cpp
Tests/TestData/: good_V_two_channels_nx=4.txt  good_V_two_channels_nx=4_to_nonconstgrid.txt  good_file_with_params_nx=4.txt  good_file_with_params_some_doubles.txt
